--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -26,7 +26,7 @@
     </header>
 
     <main class="padding-1">Main Content</main>
-    <div class="aside-sidebar">Aside Sidebar</div>
+    <div class="aside-sidebar padding-1">Aside Sidebar</div>
     <footer class="head-foot-col padding-1">Footer Content</footer>
 </body>
 
