--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="WDD 131 – Dynamic Web Fundamentals by Emmanuel A. Samuel. Explore essential web development concepts, including HTML, CSS, JavaScript, and responsive design to build dynamic, user-friendly websites." />
+        content="WDD 131 – Dynamic Web Fundamentals by Emmanuel A. Samuel. Explore essential web development concepts, including HTML, CSS, JavaScript, and responsive design to build dynamic, user-friendly websites.">
 
     <meta name="author" content="Emmanuel A. Samuel">
     <title>WDD 131 – Dynamic Web Fundamentals</title>
@@ -14,8 +14,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="/week01/styles/base.css">
-    <script src="week01/scripts/getdates.js" defer></script>
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 
 <body>
@@ -46,8 +46,7 @@
 
                 </div>
 
-                <img src="week01/images/emmanuel.webp" width="100" height="133" alt="Emmanuel A. Samuel"
-                    loading="lazy" />
+                <img src="images/emmanuel.webp" width="100" height="133" alt="Emmanuel A. Samuel" loading="lazy">
 
 
 
@@ -57,7 +56,7 @@
                 <hr>
                 <div class="flex-img f">
                     <figure>
-                        <img src="week01/images/nigerian-flag.webp" width="100" height="60" alt="flag of Nigeria"
+                        <img src="images/nigerian-flag.webp" width="100" height="60" alt="flag of Nigeria"
                             loading="lazy">
                         <figcaption><small> Official flag of Nigeria</small></figcaption>
                     </figure>
