--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         content="WDD 131 – Dynamic Web Fundamentals by Emmanuel A. Samuel. Explore essential web development concepts, including HTML, CSS, JavaScript, and responsive design to build dynamic, user-friendly websites.">
 
     <meta name="author" content="Emmanuel A. Samuel">
-    <title>WDD 131 – Dynamic Web Fundamentals</title>
+    <title>WDD 131 – Dynamic Web Fundamentals - Emmanuel A. Samuel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
