Added new headings and meta tags
I added a h2 tag and meta data for description and author

--- a/temples.html
+++ b/temples.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 – Temple gallery page">
+
+    <meta name="author" content="Emmanuel A. Samuel">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,55 +39,55 @@
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    Aba Nigeria Temple
+                    <h2>Aba Nigeria Temple</h2>
                 </figcaption>
             </figure>
         </section>
