removed the h2 from the figcaption

--- a/temples.html
+++ b/temples.html
@@ -34,60 +34,72 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h2>Temple Gallery</h2><br>
         <section class="fig-section">
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
                 <figcaption>
-                    <h2>Aba Nigeria Temple</h2>
+                    Aba Nigeria Temple
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
+                <figcaption>
+                    Aba Nigeria Temple
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="images/Aba-Nigeria-Temple.webp" width="350" height="233" alt="Aba Nigeria Temple">
+                <figcaption>
+                    Aba Nigeria Temple
                 </figcaption>
             </figure>
         </section>
