--- a/temples.html
+++ b/temples.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 – Temple gallery page">
+    <meta name="description"
+        content="WDD 131 – Temple gallery page: This page displays at least 9 temples of the Church of Jesus Christ of Latter-day Saints">
 
     <meta name="author" content="Emmanuel A. Samuel">
-    <title>Document</title>
+    <title>Temple gallery page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
