--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -36,9 +36,9 @@
     </header>
     <main>
         <h2>Temple Gallery</h2><br>
-        <section class="fig-section">
+        <div class="fig-section">
 
-        </section>
+        </div>
     </main>
     <footer class="head-foot-col padding-1">
         <p>&copy; <span id="currentyear"></span> Emmanuel A. Samuel | Nigeria</p>
