Fixed all of the errors

--- a/form.html
+++ b/form.html
@@ -49,11 +49,11 @@
                 ☆☆☆
             </label>
             <label>
-                <input type="radio" name="rating" value="4" required id="rate4>
+                <input type="radio" name="rating" value="4" required id="rate4">
                 ☆☆☆☆
             </label>
             <label>
-                <input type=" radio" name="rating" value="5" required id="rate5">
+                <input type="radio" name="rating" value="5" required id="rate5">
                 ☆☆☆☆☆
             </label><br><br>
 
@@ -94,7 +94,7 @@
             </label><br>
         </fieldset>
 
-        <input type="submit" value="Submit Product Review">
+        <input type="submit" value="Send Product Review">
     </form>
 
     <hr>
